# QGen

./: README.md  config.py  llm_config.py  main.py  pdf_reader.py  pyproject.toml
