[project]
name = "question-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google>=3.0.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-google-genai>=2.1.12",
    "pyfiglet>=1.0.4",
    "pypdf>=6.1.0",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.4",
    "termcolor>=3.1.0",
]
